@@ -320,6 +320,9 @@ Options:
                 This option may require the GNU_SOURCE compiler flag if
                 building under glibc 2.8+. (CFLAGS=-D_GNU_SOURCE ./configure)
 
+        --enable-gcov
+                Enables Gcov code coverage measurements.
+
 
 9. Downloading the CIM Schema
 =============================
